--- a/package.json
+++ b/package.json
@@ -4,12 +4,20 @@
   "description": "a todo api",
   "main": "app.js",
   "scripts": {
-    "start": "node app.js"
+    "start": "node app.js",
+    "test": "jest --forceExit"
+  },
+  "jest": {
+    "testEnvironment": "node"
   },
   "dependencies": {
     "express": "^4.17.1",
-    "sql.js": "^1.6.0",
     "lodash": "4.17.20",
-    "moment": "2.29.1"
+    "moment": "2.29.1",
+    "sql.js": "^1.6.0"
+  },
+  "devDependencies": {
+    "jest": "^30.2.0",
+    "supertest": "^7.2.2"
   }
 }
