--- a/package.json
+++ b/package.json
@@ -14,7 +14,9 @@
     "express": "^4.17.1",
     "lodash": "4.17.20",
     "moment": "2.29.1",
-    "sql.js": "^1.6.0"
+    "sql.js": "^1.6.0",
+    "swagger-jsdoc": "^6.2.8",
+    "swagger-ui-express": "^5.0.1"
   },
   "devDependencies": {
     "jest": "^30.2.0",
