--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -48,23 +48,33 @@ jobs:
             ghcr.io/${{ github.repository }}:${{ steps.version.outputs.VERSION }}
             ghcr.io/${{ github.repository }}:latest
 
-      - name: Create Git tag
+      - name: Create or update Git tag
         run: |
           git config user.name "github-actions[bot]"
           git config user.email "github-actions[bot]@users.noreply.github.com"
-          git tag "v${{ steps.version.outputs.VERSION }}"
-          git push origin "v${{ steps.version.outputs.VERSION }}"
+          git tag -f "v${{ steps.version.outputs.VERSION }}"
+          git push origin "v${{ steps.version.outputs.VERSION }}" --force
 
-      - name: Create GitHub Release
+      - name: Create or update GitHub Release
         env:
           GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         run: |
-          gh release create "v${{ steps.version.outputs.VERSION }}" \
-            --title "Release v${{ steps.version.outputs.VERSION }}" \
-            --notes "## Release v${{ steps.version.outputs.VERSION }}
+          TAG="v${{ steps.version.outputs.VERSION }}"
+          NOTES="## Release $TAG
 
           Image Docker disponible :
           \`\`\`
           docker pull ghcr.io/${{ github.repository }}:${{ steps.version.outputs.VERSION }}
-          \`\`\`" \
-            --latest
+          \`\`\`"
+
+          if gh release view "$TAG" > /dev/null 2>&1; then
+            gh release edit "$TAG" \
+              --title "Release $TAG" \
+              --notes "$NOTES" \
+              --latest
+          else
+            gh release create "$TAG" \
+              --title "Release $TAG" \
+              --notes "$NOTES" \
+              --latest
+          fi
