--- a/.github/workflows/feature.yml
+++ b/.github/workflows/feature.yml
@@ -25,6 +25,10 @@ jobs:
 
       - name: Install dependencies
         run: npm ci
+      
+      - name: Run ESLint
+        run: npx eslint . --ext .js
+        continue-on-error: false
 
       - name: Run tests
         run: npm test
