feat(tests): enhance test coverage and improve test cases

--- a/package.json
+++ b/package.json
@@ -5,10 +5,23 @@
   "main": "app.js",
   "scripts": {
     "start": "node app.js",
-    "test": "jest --forceExit"
+    "test": "jest --forceExit --coverage"
   },
   "jest": {
-    "testEnvironment": "node"
+    "testEnvironment": "node",
+    "coverageThreshold": {
+      "global": {
+        "lines": 70,
+        "functions": 70,
+        "branches": 70,
+        "statements": 70
+      }
+    },
+    "collectCoverageFrom": [
+      "app.js",
+      "routes/**/*.js",
+      "database/**/*.js"
+    ]
   },
   "dependencies": {
     "dotenv": "^17.3.1",
