--- a/.github/workflows/feature.yml
+++ b/.github/workflows/feature.yml
@@ -26,6 +26,9 @@ jobs:
       - name: Install dependencies
         run: npm ci
 
+      - name: Security Scan (npm audit)
+        run: npm audit --audit-level=moderate  
+
       - name: Run tests
         run: npm test
         env:
