--- a/package.json
+++ b/package.json
@@ -8,7 +8,10 @@
     "test": "jest --forceExit"
   },
   "jest": {
-    "testEnvironment": "node"
+    "testEnvironment": "node",
+    "setupFiles": [
+      "./jest.setup.js"
+    ]
   },
   "dependencies": {
     "dotenv": "^17.3.1",
@@ -20,7 +23,12 @@
     "swagger-ui-express": "^5.0.1"
   },
   "devDependencies": {
-    "jest": "^30.2.0",
+    "jest": "^29.7.0",
     "supertest": "^7.2.2"
-  }
+  },
+  
+  "overrides": {
+  "minimatch": "^10.2.1",
+  "glob": "^11.0.0"
+}
 }
