--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "moment": "2.29.4",
     "sql.js": "^1.6.0",
     "swagger-jsdoc": "^6.2.8",
+    "swagger-ui-dist": "^5.31.2",
     "swagger-ui-express": "^5.0.1"
   },
   "devDependencies": {
