--- a/package.json
+++ b/package.json
@@ -35,13 +35,12 @@
     "swagger-ui-express": "^5.0.1"
   },
   "devDependencies": {
-    "jest": "^29.7.0",
+    "jest": "^30.2.0",
     "supertest": "^7.2.2"
   },
   "overrides": {
-    "test-exclude": "^8.0.0",
-    "swagger-jsdoc": {
-      "glob": "^11.0.0"
-    }
+    "glob": "^11.0.0",
+    "minimatch": "^10.2.1",
+    "test-exclude": "^8.0.0"
   }
 }
