--- a/.github/workflows/feature.yml
+++ b/.github/workflows/feature.yml
@@ -27,7 +27,7 @@ jobs:
         run: npm ci
       
       - name: Run ESLint
-        run: npx eslint . --ext .js
+        run: npx eslint .
         continue-on-error: false
 
       - name: Security Scan (npm audit)
