--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -23,9 +23,18 @@ jobs:
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
-        
+
+      - name: Setup Node.js
+        uses: actions/setup-node@v4
+        with:
+          node-version: "20"
+          cache: "npm"
+
+      - name: Install dependencies
+        run: npm ci
+
       - name: Run ESLint
-        run: npx eslint . --ext .js
+        run: npx eslint .
         continue-on-error: false
 
       - name: Security Scan (npm audit)
