--- a/.github/workflows/feature.yml
+++ b/.github/workflows/feature.yml
@@ -25,6 +25,13 @@ jobs:
 
       - name: Install dependencies
         run: npm ci
+      
+      - name: Run ESLint
+        run: npx eslint .
+        continue-on-error: false
+
+      - name: Security Scan (npm audit)
+        run: npm audit --audit-level=moderate  
 
       - name: Run tests
         run: npm test
