--- a/package.json
+++ b/package.json
@@ -5,12 +5,14 @@
   "main": "app.js",
   "scripts": {
     "start": "node app.js",
-    "test": "jest --forceExit --coverage"
+    "test": "jest --forceExit --coverage --testPathIgnorePatterns=performance",
+    "test:perf": "jest --forceExit tests/performance.test.js"
   },
   "jest": {
     "testEnvironment": "node",
     "setupFiles": [
-      "./jest.setup.js"],
+      "./jest.setup.js"
+    ],
     "coverageThreshold": {
       "global": {
         "lines": 70,
@@ -37,6 +39,7 @@
   },
   "devDependencies": {
     "@eslint/js": "^10.0.1",
+    "autocannon": "^8.0.0",
     "eslint": "^10.0.2",
     "globals": "^17.3.0",
     "jest": "^30.2.0",
