--- a/package.json
+++ b/package.json
@@ -6,7 +6,11 @@
   "scripts": {
     "start": "node app.js",
     "test": "jest --forceExit --coverage --testPathIgnorePatterns=performance",
-    "test:perf": "jest --forceExit tests/performance.test.js"
+    "test:perf": "jest --forceExit tests/performance.test.js",
+    "release": "standard-version",
+    "release:minor": "standard-version --release-as minor",
+    "release:major": "standard-version --release-as major",
+    "prepare": "husky"
   },
   "jest": {
     "testEnvironment": "node",
@@ -38,11 +42,15 @@
     "swagger-ui-express": "^5.0.1"
   },
   "devDependencies": {
+    "@commitlint/cli": "^20.4.2",
+    "@commitlint/config-conventional": "^20.4.2",
     "@eslint/js": "^10.0.1",
     "autocannon": "^8.0.0",
     "eslint": "^10.0.2",
     "globals": "^17.3.0",
+    "husky": "^9.1.7",
     "jest": "^30.2.0",
+    "standard-version": "^9.5.0",
     "supertest": "^7.2.2"
   },
   "overrides": {
