--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -23,8 +23,12 @@ concurrency:
 # ──────────────────────────────────────────────────────────────
 jobs:
   quality:
-    name: Quality Checks
+    name: Quality Checks (Node ${{ matrix.node-version }})
     runs-on: ubuntu-latest
+    strategy:
+      fail-fast: false
+      matrix:
+        node-version: ["18", "20", "22"]
 
     steps:
       - name: Checkout code
@@ -33,10 +37,10 @@ jobs:
           # fetch-depth: 0 requis pour SonarCloud (analyse de blame / PR diff)
           fetch-depth: 0
 
-      - name: Setup Node.js
+      - name: Setup Node.js ${{ matrix.node-version }}
         uses: actions/setup-node@49933ea5288caeca8642d1e84afbd3f7d6820020 # v4.4.0
         with:
-          node-version: "20"
+          node-version: ${{ matrix.node-version }}
           cache: "npm"
 
       - name: Install dependencies
@@ -62,15 +66,17 @@ jobs:
         env:
           NODE_ENV: test
 
-      # ── Docker build (validation) ───────────────────────────
+      # ── Docker build (validation) — une seule fois sur Node 20 ──
       - name: Build Docker image
+        if: matrix.node-version == '20'
         run: docker build -t todo-api-node:ci .
 
       - name: SonarCloud Scan
         if: |
-          github.ref == 'refs/heads/main'
+          matrix.node-version == '20'
+          && (github.ref == 'refs/heads/main'
           || github.ref == 'refs/heads/develop'
-          || github.event_name == 'pull_request'
+          || github.event_name == 'pull_request')
         uses: SonarSource/sonarqube-scan-action@0303d6b62e310685c0e34d0b9cde218036885c4d # v5.0.0
         env:
           SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
