--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -36,6 +36,25 @@ jobs:
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@b5ca514318bd6ebac0fb2aedd5d36ec1b5c232a2 # v3.10.0
 
+      - name: Save previous version as tag 'previous'
+        env:
+          GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        run: |
+          REPO_LOWER="${{ steps.version.outputs.REPO_LOWER }}"
+          # Récupère la version currently taggée :latest (= version précédente)
+          PREV=$(gh release list --limit 5 --json tagName,isLatest \
+            | jq -r '[.[] | select(.isLatest == true)] | .[0].tagName // empty' \
+            | sed 's/^v//') || true
+          if [ -n "$PREV" ]; then
+            docker pull "ghcr.io/${REPO_LOWER}:${PREV}" 2>/dev/null || true
+            docker tag  "ghcr.io/${REPO_LOWER}:${PREV}" \
+                        "ghcr.io/${REPO_LOWER}:previous" 2>/dev/null || true
+            docker push "ghcr.io/${REPO_LOWER}:previous" 2>/dev/null || true
+            echo "✅ Tag :previous sauvegardé → $PREV"
+          else
+            echo "⚠️  Aucune version précédente trouvée, étape ignorée"
+          fi
+
       - name: Build and push Docker image
         uses: docker/build-push-action@471d1dc4e07e5cdedd4c2171150001c434f0b7a4 # v6.15.0
         with:
